Switch to using WUT headers everywhere
== DETAILS
I did some searching and found other places where RA was using
its in-tree WUT-like headers, and updated them to use external WUT,
where possible.

There's a handful of headers where RA's are more precise, and these
have been put into the `wiiu/include/` hierarchy mirroring WUT's folder
structure, but with `ra_` prepended to the filename to avoid include
directory priority fighting.

Other changes are related to the header changes:
- update defines to use WUT's new definition
- replace custom integer types with standard ones (eg u8 -> uint8_t)
- remove some workarounds/hacks in favor of more precise handling
  in WUT.

--- a/Makefile.wiiu
+++ b/Makefile.wiiu
@@ -2,7 +2,7 @@ TARGET := retroarch_wiiu
 
 DEBUG                      = 0
 GRIFFIN_BUILD              = 0
-SALAMANDER_BUILD           = 0
+SALAMANDER_BUILD          ?= 0
 HAVE_STATIC_DUMMY ?= 0
 WHOLE_ARCHIVE_LINK         = 0
 WIIU_HID                   = 1
