--- a/Makefile.common
+++ b/Makefile.common
@@ -1201,6 +1201,9 @@ ifeq ($(TARGET), retroarch_wiiu)
 	   input/drivers_joypad/wiiu/kpad_driver.o \
 	   input/drivers_joypad/wiiu/pad_functions.o \
 	   audio/drivers/wiiu_audio.o \
+	   audio/drivers/wiiu_audio2.o \
+	   audio/drivers/wiiu_audio2_core.o \
+	   audio/drivers/wiiu_audio2_ext.o \
 	   frontend/drivers/platform_wiiu.o
 
       ifeq ($(WIIU_HID),1)
